--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "homepage": "https://github.com/AntonioTempest/reviews#readme",
   "dependencies": {
+    "axios": "0.24.0",
     "express": "^4.17.1",
     "node": "^17.1.0",
     "nodemon": "^2.0.15",
-    "pg" : "8.7.1",
+    "pg": "8.7.1",
     "pg-promise": "10.11.1",
-    "axios": "0.24.0"
+    "sequelize": "^6.9.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0"
